fixed scrollbar issue and refactored add-csv logic

--- a/Frontend/parth-traders/src/app/admin/add-product/add-product.component.css
+++ b/Frontend/parth-traders/src/app/admin/add-product/add-product.component.css
@@ -2,6 +2,31 @@
   --primary-color: #3a57e8;
 }
 
+.overflow-scroll {
+  max-height: 30px;
+  overflow-y: scroll;
+}
+
+.modal-body {
+  height: 70vh;
+  overflow-y: auto;
+}
+
+.modal-body::-webkit-scrollbar {
+  width: 1em;
+}
+
+.modal-body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.modal-body::-webkit-scrollbar-thumb {
+  border: 5px solid transparent;
+  border-radius: 100px;
+  background-color: #0563bb;
+  background-clip: content-box;
+}
+
 body {
   background-color: #72bdef21;
 }
